# mojibake

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  API.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONFORMANCE_REQUIREMENTS.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  INSTALL.md  LICENSE  Makefile  Makefile.nmake  README.md  ROADMAP.md  SECURITY.md  TESTS.md  TODO.md  build_unicode_data.sh  mojibake.bat  mojibake.db  mojibake.sh  package-lock.json  unicode_data.c  unicode_data.h  unicodex.c  unicodex.h
.claude/skills/add-test/: SKILL.md
.claude/skills/update-version/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: dependency-review.yml  quality.yml  test.yml
cli/: mojibake.c
cmake/: MojibakeConfig.cmake.in
doc/: Makefile  example.c
examples/: example  example-no-character-names  example.c
ext/cpp/: mojibake.hpp
fuzz/: Dockerfile  fuzz.c
fuzz/corpus/: bidi-controls  casing  decomposed  emoji-component  locale-tag  mixed-rtl  nfkc-casefold  turkish
shell/: CMakeLists.txt  characters.c  characters.h  main.c  maps.c  maps.h  shell.c  shell.h
shell/commands/: character.c  commands.h  normalize.c
src/: CMakeLists.txt  array.c  array.h  bidi.c  blocks.c  blocks.h  break-line.c  break-sentence.c  break-word.c  break.c  break.h  breaking.c  breaking.h  buffer.c  buffer.h  case.c  caseless.c  cjk.c  codepoint.c  collation.c  data.c  data.h  db.c  db.h  display.c  east-asian-width.c  east-asian-width.h  emoji.c  encoding.c  filter.c  format.c  hangul.c  identifier.c  locales.c  locales.h  memory.c  mojibake-internal.h  mojibake.c  mojibake.db  mojibake.h  (+26 more)
src/api/: cstruct.js  index.js  index.ts  locales.ts  mojibake.d.ts  package-lock.json  package.json  server.js  tsconfig.json  tsconfig.tests.json  unicode.ts
src/api/scripts/: clean-dist.mjs  copy-assets.mjs  test-browser.mjs
src/api/tests/: attraction.ts  attractor.ts  browser.html  index.ts  tsconfig.json
src/cpp/: README.md  mojibake.hpp
src/shell/: CMakeLists.txt  characters.c  characters.h  main.c  maps.c  maps.h  screen.c  screen.h  shell.c  shell.h
src/shell/commands/: bidi.c  break.c  character.c  codepoint.c  commands.h  emoji.c  filter.c  locale.c  normalize.c  segment.c  string.c
src/shell/getopt/: getopt.c  getopt.h
src/site/: index.html  mojibake.js  site.webmanifest  style.css
src/sqlite3/: CMakeLists.txt
tests/: CMakeLists.txt  array.c  bidi-class.c  bidi.c  break-line.c  break-sentence.c  break-word.c  break.c  breaking.c  case.c  caseless.c  cjk.c  codepoint.c  collation.c  compile.sh  db.c  display.c  east-asian-width.c  embedded-null.c  emoji.c  encoding.c  example.c  filter.c  format.c  hangul-composition.c  hangul.c  identifier.c  locales.c  main.c  memory.c  mojibake.c  next.c  normalization.c  plane.c  properties.c  quick-check.c  security.c  segmentation.c  sort.c  special-case.c  (+7 more)
tests/attractor/: attractor.c  attractor.h
tests/cmake/: run-embedded-test.cmake
tests/cmake/embedded-project/: CMakeLists.txt  main.c
tests/ext/cpp/: break.cpp  locales.cpp  mojibake.cpp  normalization.cpp
tests/old/: codepoint.c  db.c  memory.c  normalization.c  plane.c  test.c  version.c
tests/shell/: break-json.cmake
tests/utils/: utils.c
unicodex.xcodeproj/: project.pbxproj
unicodex.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
unicodex.xcodeproj/xcuserdata/zaerl.xcuserdatad/xcschemes/: unicodex_test.xcscheme  xcschememanagement.plist
unicodex_test/: main.c
utils/: analysis.ts  blocks.ts  build_unicode_data.sh  cfunction.ts  character.ts  compositition-exclusion.ts  coverage.py  data.ts  db.ts  decomposition.ts  format.ts  generate-header.ts  generate-readme.ts  generate-tests.ts  generate-utf8-tests.ts  generate.sh  header.ts  header_guard.sh  index.ts  license.sh  load.sh  package-lock.json  package.json  readme.ts  types.ts  utils.ts
utils/generate/: aliases.ts  amalgamation.ts  analysis.ts  blocks.ts  c-function.ts  c-functions.json  casefold.ts  character.ts  compositition-exclusion.ts  coverage.ts  db.ts  decomposition.ts  download-test-data.sh  emoji-properties.ts  emoji.ts  function.ts  functions.d.ts  functions.js  functions.json  functions.ts  generate-amalgamation.bat  generate-amalgamation.sh  generate-amalgamation.ts  generate-api.ts  generate-break.ts  generate-east-asian-width.ts  generate-embedded-db.ts  generate-emoji.ts  generate-examples.ts  generate-header.ts  generate-locales.bat  generate-locales.sh  generate-locales.ts  generate-readme.ts  generate-site.ts  generate-tests.ts  generate-unicode-tables.ts  generate-wasm-td.ts  generate-wasm.ts  generate.bat  (+18 more)
utils/generate/commands/: coverage.ts  generate-site.ts  generate.ts  update-version.ts
utils/generate/file-generators/: api-md.ts  example-c.ts  locales-h.ts  unicode-data-h.ts  wasm-d-ts.ts
utils/generate/file-generators/unicode-data/: blocks.ts  case.ts  collation.ts  composition.ts  confusable.ts  emoji.ts  n-characters.ts  names.ts  numeric.ts  properties.ts  script-extensions.ts
utils/generate/locales/: generate-locale.ts  it.db  locale-id.ts  utils.ts
utils/generate/parse-ucd/: aliases.ts  bidi-brackets.ts  bidi-mirroring.ts  blocks.ts  breaks.ts  casefold.ts  collation.ts  compositition-exclusion.ts  confusables.ts  derived-core-properties.ts  east-asian-width.ts  emoji-properties.ts  emoji-sequences.ts  parse-property-file.ts  properties.ts  quick-check.ts  script-extensions.ts  special-casing.ts  utils.ts
utils/generate/scripts/: download-test-data.sh  generate-amalgamation.bat  generate-amalgamation.sh  generate-locales.bat  generate-locales.sh  generate.bat  generate.sh
utils/generate/site/: generate-site.ts
utils/generate/tables/: blocks.ts  case.ts  collation.ts  composition.ts  confusable.ts  emoji.ts  n-characters.ts  names.ts  numeric.ts  properties.ts  script-extensions.ts  types.ts
utils/sqlite3/: generate-sqlite.bat  generate-sqlite.sh  linkage-fixes.c  windows-fixes.c
